# reposmerge-rs

./: .gitattributes  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PORT-GLOSSARY.md  PORT-PROVENANCE.json  PORT-TRACK.md  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.scripts/: 00-A_test_model.ps1
docs/: ARCHITECTURE.md  BACKLOG.md  BUGS.md  CONTRIBUTORS.md  FEATURES.md  IMPLEMENTATION_TASKS.md  ISSUES.md  MILESTONES.md  ROADMAP.md
docs/adr/: ADR-0001-faithful-1to1-port.md
proptest-regressions/: discover.txt
src/: app.rs  consolidate.rs  discover.rs  fingerprint.rs  gitx.rs  group.rs  lib.rs  main.rs  model.rs  report.rs  safety.rs  strategy.rs
tests/: cli.rs  e2e.rs
tests/golden/: MANIFEST.md  divergence.md  plan.json
