[package]
name = "reposmerge"
version = "1.0.0"
edition = "2021"
rust-version = "1.74"
description = "Consolidate duplicated/scattered git repo copies into canonical repos (Rust port of inovacc/reposmerge)"
license = "BSD-3-Clause"
# Not published to crates.io — distributed via GitHub Releases only. This blocks
# an accidental `cargo publish`.
publish = false
authors = ["dyammarcano <dyam.marcano@gmail.com>"]
repository = "https://github.com/inovacc/reposmerge-rs"
homepage = "https://github.com/inovacc/reposmerge-rs"
readme = "README.md"
keywords = ["git", "consolidate", "repos", "monorepo", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "reposmerge"
path = "src/lib.rs"

[[bin]]
name = "reposmerge"
path = "src/main.rs"

# Dependencies are added lazily, module-by-module, as the port forces them
# (std-first). Each addition is logged in PORT-TRACK.md with its justification.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
